--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,10 +1,25 @@
 .navbar {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: left;
+    justify-content: space-around;
+    margin-top: 3rem;
 }
 
 .navbar__item {
-    flex-basis: 20%;
     list-style-type: none;
+}
+
+.nav-link {
+    background-image: url("../../brick.png");
+    background-size: contain;
+    padding: 30px 20px;
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+
+.navbar__item:hover {
+    transform: scale(1.1);
+    backface-visibility: hidden;
+    perspective: 1000px;
 }
