--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: "Patua One", serif;
     letter-spacing: 2px;
+	text-align: center;
 }
 
 code {
@@ -90,10 +91,6 @@ code {
 
 
 /* Icon separator */
-.btn-sep {
-	padding: 25px 60px 25px 120px;
-}
-
 .btn-sep:before {
 	background: rgba(0,0,0,0.15);
 }
