--- a/src/components/event/Event.css
+++ b/src/components/event/Event.css
@@ -34,7 +34,7 @@
 
 .registration {
     background-color: rgba(255, 255, 255);
-    padding: 2rem 0 2rem 2rem;
+    padding: 2rem;
     border-radius: 7rem;
     text-align: center;
 }
