--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ code {
 	color: inherit;
 	background: none;
 	cursor: pointer;
-	padding: 25px 80px;
+	padding: 15px 20px;
 	display: inline-block;
 	margin: 15px 30px;
 	text-transform: uppercase;
@@ -177,7 +177,7 @@ code {
 }
 
 .btn-4:hover {
-	background: #2c3e50;
+	background: #0e1318;
 }
 
 .btn-4:active {
