--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -49,7 +49,7 @@ fieldset {
 .form--login {
     background-size: cover;
     background-position-x: center;
-    background-image: url('./logo.png');
+    /* background-image: url('./logo.png'); */
     z-index: 1;
     min-height: 25rem;
     min-width: 45rem;
@@ -57,6 +57,8 @@ fieldset {
     background-color: hsla(0,0%,100%,0.75);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    border-radius: 4rem;
+    margin-top: 4rem;
 }
 
 .button--close {
@@ -67,4 +69,64 @@ fieldset {
 .dialog {
     min-width: 15rem;
     min-height: 5rem;
+}
+
+.link--register a {
+    color: white
+}
+
+.link--register {
+    color: white;
+}
+
+.mario {
+    height: 15rem;
+}
+
+.mario:hover {
+	backface-visibility: visible !important;
+	animation: flip 2s ease infinite;
+}
+@keyframes flip {
+	0% {
+		transform: perspective(600px) rotateY(0);
+		animation-timing-function: ease-out;
+	}
+	40% {
+		transform: perspective(600px) translateZ(150px) rotateY(170deg);
+		animation-timing-function: ease-out;
+	}
+	50% {
+		transform: perspective(600px) translateZ(150px) rotateY(190deg) scale(1);
+		animation-timing-function: ease-in;
+	}
+	80% {
+		transform: perspective(600px) rotateY(360deg) scale(.95);
+		animation-timing-function: ease-in;
+	}
+	100% {
+		transform: perspective(600px) scale(1);
+		animation-timing-function: ease-in;
+	}
+}
+
+.form--login--flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.form--login--container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mario-flex {
+    position: fixed;
+    bottom: 1rem;
+    right: 8rem;
+    height: 40%;
+    z-index: -1;
 }
