--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -31,8 +31,17 @@
     padding: 2rem 2rem 2rem 2rem;
     border-radius: 7rem;
     text-align: center;
+    max-width: 40rem;
 }
 
 .game__title {
     font-size: 1.5rem;
+}
+
+.mario-flex-right {
+    position: fixed;
+    bottom: 6rem;
+    left: 10rem;
+    height: 28%;
+    z-index: -1;
 }
