--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body, button, input, select, textarea {
     color: #404040;
-    font-family: "Comfortaa", Arial, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     font-size: 1rem;
     line-height: 1.5;
     padding: 0;
@@ -21,7 +21,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Patua One", serif;
+    font-family: 'Press Start 2P', cursive;
     letter-spacing: 2px;
 	text-align: center;
 }
