Supp Ch.1 Done - Event count showing on client on game list

--- a/src/components/auth/Profile.css
+++ b/src/components/auth/Profile.css
@@ -11,3 +11,9 @@
     border-radius: 7rem;
     margin-bottom: 5rem;
 }
+
+.profile__info {
+    background: gold;
+    border-radius: 5rem;
+    padding: 0 3rem;
+}
