--- a/src/components/event/Event.css
+++ b/src/components/event/Event.css
@@ -6,7 +6,7 @@
 }
 
 .eventList-container {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 0 8rem;
     border-radius: 7rem;
     margin-bottom: 5rem;
@@ -21,7 +21,7 @@
 
 .eventForm-flex {
     flex-basis: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 0 5rem;
     border-radius: 7rem;
 }
@@ -33,7 +33,8 @@
 }
 
 .registration {
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 6px rgb(212, 212, 212);
     padding: 2rem;
     border-radius: 7rem;
     text-align: center;
