--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -6,9 +6,10 @@
 }
 
 .gameList-container {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 0 8rem;
     border-radius: 7rem;
+    margin-bottom: 5rem;
 }
 
 .gameForm {
@@ -21,7 +22,7 @@
 
 .gameForm-flex {
     flex-basis: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 0 5rem;
     border-radius: 7rem;
 }
@@ -31,7 +32,7 @@
     padding: 2rem 2rem 2rem 2rem;
     border-radius: 7rem;
     text-align: center;
-    max-width: 40rem;
+    max-width: 45rem;
 }
 
 .game__title {
