--- a/src/components/auth/Profile.css
+++ b/src/components/auth/Profile.css
@@ -10,6 +10,8 @@
     padding: 0 8rem 3rem 8rem;
     border-radius: 7rem;
     margin-bottom: 5rem;
+    max-width: 30%;
+    
 }
 
 .profile__info {
