--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -10,6 +10,7 @@
     padding: 0 8rem;
     border-radius: 7rem;
     margin-bottom: 5rem;
+    max-width: 40%;
 }
 
 .gameForm {
@@ -33,6 +34,11 @@
     border-radius: 7rem;
     text-align: center;
     max-width: 45rem;
+    cursor: grab;
+}
+
+.game:active {
+    cursor: grabbing;
 }
 
 .game__title {
@@ -48,6 +54,11 @@
 }
 
 .searchBar {
+    display: flex;
+    justify-content: center;
+}
+
+.tab {
     display: flex;
     justify-content: center;
 }
